Manifests/MDM/Manifests/SSL/ui-service.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: ui
#   labels:
#     app: ui
#   annotations:
#     app.kubernetes.io/name: ui
#     app.kubernetes.io/part-of: ui
# spec:
#   type: ClusterIP
#   sessionAffinity: ClientIP
#   sessionAffinityConfig:
#     clientIP:
#       timeoutSeconds: 600
#   selector:
#     app: ui
#   ports:
#     - protocol: TCP
#       port: 8082
#       targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ui
