Manifests/MDM/Manifests/SSL/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  labels:
    app: ui
spec:
  tls:
    - hosts:
        - cluster-k8s.ov.universe-data.ru
      secretName: cluster-k8s-ov-universe-data-ru-tls
  rules:
    - host: cluster-k8s.ov.universe-data.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
  ingressClassName: nginx
